replace deprecated HttpURLConnection with HttpClient in RemoteLogger, add explicit JNA imports in NativeTray
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>